# stm32-cube-cmake-vscode

./: .gitignore  README.md  converter.py  stm32-cube-cmake-vscode.py
cube-ide-cmake-demo-proj/: .cproject  .project  CMakeLists.txt  STM32H735IGKX_FLASH.ld  STM32H735IGKX_RAM.ld  cube-ide-cmake-demo-proj.ioc  gcc-arm-none-eabi.cmake
cube-ide-cmake-demo-proj/Core/Inc/: main.h  stm32h7xx_it.h
cube-ide-cmake-demo-proj/Core/Src/: main.c  stm32h7xx_it.c
cube-ide-cmake-demo-proj/cmake_generated/: cmake_generated.cmake
script-projects/h735g-dk-touchgfx/: .extSettings  CMakeLists.txt  README_how_to_build.md  STM32H735G-DK.ioc  backup_STM32H735G-DK.ioc
script-projects/h735g-dk-touchgfx/Core/Inc/: FreeRTOSConfig.h  ft5336_conf.h  main.h  mx25lm51245g_conf.h  s70kl1281_conf.h  stm32h735g_discovery_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
script-projects/h735g-dk-touchgfx/Core/Src/: freertos.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  system_stm32h7xx.c
script-projects/h735g-dk-touchgfx/Drivers/BSP/Components/Common/: audio.h  camera.h  dpredriver.h  env_sensor.h  epd.h  idd.h  io.h  lcd.h  motion_sensor.h  pwrmon.h  ts.h  usbtypecswitch.h
script-projects/h735g-dk-touchgfx/Drivers/BSP/Components/ft5336/: ft5336.c  ft5336.h  (+3 more)
script-projects/h735g-dk-touchgfx/Drivers/BSP/STM32H735G-DK/: stm32h735g_discovery.c  stm32h735g_discovery.h  stm32h735g_discovery_bus.c  stm32h735g_discovery_bus.h  stm32h735g_discovery_errno.h  stm32h735g_discovery_ospi.c  stm32h735g_discovery_ospi.h  stm32h735g_discovery_ts.c  stm32h735g_discovery_ts.h
script-projects/h735g-dk-touchgfx/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_compiler.h  cmsis_gcc.h  core_armv81mml.h  core_cm0plus.h  core_cm1.h  core_cm35p.h  core_cm4.h  core_cm7.h  mpu_armv7.h  tz_context.h
script-projects/h735g-dk-touchgfx/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h  stm32h7xx_hal_cortex.h  stm32h7xx_hal_crc.h  stm32h7xx_hal_crc_ex.h  stm32h7xx_hal_def.h  stm32h7xx_hal_dma.h  stm32h7xx_hal_dma2d.h  stm32h7xx_hal_dma_ex.h  stm32h7xx_hal_exti.h  stm32h7xx_hal_flash.h  stm32h7xx_hal_flash_ex.h  stm32h7xx_hal_gpio.h  stm32h7xx_hal_i2c.h  stm32h7xx_hal_i2c_ex.h  stm32h7xx_hal_ltdc.h  stm32h7xx_hal_ltdc_ex.h  stm32h7xx_hal_mdma.h  stm32h7xx_hal_ospi.h  stm32h7xx_hal_pwr.h  stm32h7xx_hal_pwr_ex.h  stm32h7xx_hal_rcc.h  stm32h7xx_hal_rcc_ex.h  stm32h7xx_hal_tim.h  stm32h7xx_hal_tim_ex.h
script-projects/h735g-dk-touchgfx/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c  stm32h7xx_hal_cortex.c  stm32h7xx_hal_crc.c  stm32h7xx_hal_crc_ex.c  stm32h7xx_hal_dma.c  stm32h7xx_hal_dma2d.c  stm32h7xx_hal_dma_ex.c  stm32h7xx_hal_exti.c  stm32h7xx_hal_flash.c  stm32h7xx_hal_flash_ex.c  stm32h7xx_hal_gpio.c  stm32h7xx_hal_hsem.c  stm32h7xx_hal_i2c.c  stm32h7xx_hal_i2c_ex.c  stm32h7xx_hal_ltdc.c  stm32h7xx_hal_ltdc_ex.c  stm32h7xx_hal_mdma.c  stm32h7xx_hal_ospi.c  stm32h7xx_hal_pwr.c  stm32h7xx_hal_pwr_ex.c  stm32h7xx_hal_rcc.c  stm32h7xx_hal_rcc_ex.c  stm32h7xx_hal_tim.c  stm32h7xx_hal_tim_ex.c
script-projects/h735g-dk-touchgfx/EWARM/: Project.eww  STM32H735G-DK.ewd  STM32H735G-DK.ewp  stm32h735xx_dtcmram.icf  stm32h735xx_flash.icf  stm32h735xx_flash_rw_sram1.icf  stm32h735xx_flash_rw_sram2.icf  stm32h735xx_sram1.icf
script-projects/h735g-dk-touchgfx/MDK-ARM/: STM32H735G-DK.uvprojx  startup_stm32h735xx.s
script-projects/h735g-dk-touchgfx/STM32CubeIDE/: .cproject  .project  STM32H735G-DK.launch  STM32H735IGKX_FLASH.ld  STM32H735IGKX_RAM.ld
script-projects/h735g-dk-touchgfx/TouchGFX/: ApplicationTemplate.touchgfx.part  application.config  h735g-dk-touchgfx.touchgfx  h735g-dk-touchgfx_backup.touchgfx
script-projects/h735g-dk-touchgfx/TouchGFX/App/: app_touchgfx.c  app_touchgfx.h
script-projects/h735g-dk-touchgfx/TouchGFX/assets/texts/: texts.xml  texts.xsd
script-projects/h735g-dk-touchgfx/TouchGFX/config/gcc/: app.mk
script-projects/h735g-dk-touchgfx/TouchGFX/config/msvs/: Application.props
script-projects/h735g-dk-touchgfx/TouchGFX/simulator/msvs/: Application.sln  Application.vcxproj  Application.vcxproj.filters
script-projects/h735g-dk-touchgfx/cmake_generated/: cmake_generated.cmake
script-projects/h735g-dk-touchgfx/gcc/: Makefile  STM32H735IGKX_FLASH.ld
script-projects/h735g-dk-touchgfx/gcc/include/: cube_programmer.mk  flash_sections_int_ext.mk
script-projects/h735g-dk-usart/: .cproject  .project  CMakeLists.txt  CMakePresets.json  Makefile  STM32H73x.svd  h735g-dk-usart.ioc
script-projects/h735g-dk-usart/Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
script-projects/h735g-dk-usart/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c  sysmem.c  system_stm32h7xx.c
script-projects/h735g-dk-usart/Drivers/CMSIS/Include/: cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm23.h  core_cm3.h  core_cm33.h  core_sc000.h  core_sc300.h  mpu_armv8.h
script-projects/h735g-dk-usart/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h  stm32h7xx_hal_cortex.h  stm32h7xx_hal_def.h  stm32h7xx_hal_dma.h  stm32h7xx_hal_dma_ex.h  stm32h7xx_hal_exti.h  stm32h7xx_hal_flash.h  stm32h7xx_hal_flash_ex.h  stm32h7xx_hal_gpio.h  stm32h7xx_hal_i2c.h  stm32h7xx_hal_i2c_ex.h  stm32h7xx_hal_mdma.h  stm32h7xx_hal_pwr.h  stm32h7xx_hal_pwr_ex.h  stm32h7xx_hal_rcc.h  stm32h7xx_hal_rcc_ex.h  stm32h7xx_hal_tim.h  stm32h7xx_hal_tim_ex.h  stm32h7xx_hal_uart.h  stm32h7xx_hal_uart_ex.h
script-projects/h735g-dk-usart/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c  stm32h7xx_hal_cortex.c  stm32h7xx_hal_dma.c  stm32h7xx_hal_dma_ex.c  stm32h7xx_hal_exti.c  stm32h7xx_hal_flash.c  stm32h7xx_hal_flash_ex.c  stm32h7xx_hal_gpio.c  stm32h7xx_hal_hsem.c  stm32h7xx_hal_i2c.c  stm32h7xx_hal_i2c_ex.c  stm32h7xx_hal_mdma.c  stm32h7xx_hal_pwr.c  stm32h7xx_hal_pwr_ex.c  stm32h7xx_hal_rcc.c  stm32h7xx_hal_rcc_ex.c  stm32h7xx_hal_tim.c  stm32h7xx_hal_tim_ex.c  stm32h7xx_hal_uart.c  stm32h7xx_hal_uart_ex.c
script-projects/h735g-dk-usart/FATFS/App/: fatfs.c  fatfs.h
script-projects/h735g-dk-usart/cmake_generated/: cmake_generated.cmake
(+410 files in other folders)
